# onednn-wrapper

./: .gitignore  BUILD.md  ISSUES.md  PRIMITIVES.md  README.md  TUTORIAL.md  annotated.html  annotated_dup.js  build_mnist.sh  build_realEstate.sh  build_skin.sh  build_testing.sh  classConv2D-members.html  classConv2D.html  classConv2D.js  classConv2D__back__data-members.html  classConv2D__back__data.html  classConv2D__back__data.js  classConv2D__back__weights-members.html  classConv2D__back__weights.html  classConv2D__back__weights.js  classDataLoader-members.html  classDataLoader.html  classDataLoader.js  classDense-members.html  classDense.html  classDense.js  classDense__back__data-members.html  classDense__back__data.html  classDense__back__data.js  classDense__back__weights-members.html  classDense__back__weights.html  classDense__back__weights.js  classEltwise-members.html  classEltwise.html  classEltwise.js  classEltwise__back-members.html  classEltwise__back.html  classEltwise__back.js  classL2__Loss-members.html  (+110 more)
config/: config.json  config_mnist.json  config_mnist_cpu.json  config_mnist_gpu.json  config_skin.json  config_skin_cpu.json  config_skin_gpu.json
dataset_utils/: dataset_admission.py  dataset_gen.py  dataset_mnist.py  dataset_mpg.py  dataset_realEstate.py  dataset_skin.py
include/: data_loader.hpp  layers.hpp  layers_fwd.hpp  (+6 more)
src/layers/src/: CMakeLists.txt  layers_bwd_data.cpp  layers_bwd_weights.cpp  layers_fwd.cpp  losses.cpp  primitive_wrappers.cpp  weights_update.cpp
src/misc/src/: CMakeLists.txt  data_loader.cpp  intel_utils.cpp  util.cpp
(+59 files in other folders)
